--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="minespr">minesPr</string>
     <string name="gameOver">You loose!</string>
     <string name="success">You win!</string>
+    <string name="save_record">Save Record</string>
 </resources>
