--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="minespr">minesPr</string>
     <string name="gameOver">Вы проиграли!</string>
     <string name="success">Вы победили!</string>
+    <string name="save_record">Сохранить рекорд</string>
 </resources>
