--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,4 +11,5 @@
     <string name="gameOver">Вы проиграли!</string>
     <string name="success">Вы победили!</string>
     <string name="save_record">Сохранить рекорд</string>
+    <string name="settings">Настройки</string>
 </resources>
