--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="gameOver">You loose!</string>
     <string name="success">You win!</string>
     <string name="save_record">Save Record</string>
+    <string name="settings">Settings</string>
 </resources>
