--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="success">You win!</string>
     <string name="save_record">Save Record</string>
     <string name="settings">Settings</string>
+    <string name="ok_bth_title">OK</string>
 </resources>
