--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="save_record">Save Record</string>
     <string name="settings">Settings</string>
     <string name="ok_bth_title">OK</string>
+    <string name="title_dialog">HighScore record</string>
+    <string name="message_dialog">Enter your name</string>
+    <string name="cancel">Cancel</string>
 </resources>
